--- a/jcgs_reviewer/reviewer_2.tex
+++ b/jcgs_reviewer/reviewer_2.tex
@@ -23,7 +23,7 @@
 	\begin{enumerate}
 		\point{Last paragraph of page 4: you assume that (3) for the training set is strictly convex in $\theta$. I am wondering if the strict convexity assumption would exclude some interesting high-dimensional cases. Can this assumption be removed? Otherwise, it should be listed as a separate condition along with Conditions 1-3 on page 7, as it is a strong condition.}
 		
-		\reply We thank the reviewer for finding this mistake. The strict convexity assumption is unnecessary, so we have it from the paper. Our method only requires the three conditions in Theorem 1. The conditions are now applicable to many popular penalized regression settings.
+		\reply We thank the reviewer for finding this mistake. The strict convexity assumption is unnecessary, so we have it from the paper. Our method only requires the conditions specified in Theorem 1. The conditions are applicable to many popular penalized regression settings, including high-dimensional problems.
 		
 		\point{Page 7, I found the statement of Definition 3 somewhat disconnected with the rest of the paper. For example, you assume the $n\times p$ matrix $B$ has orthonormal columns. Does this require p is smaller than (or equal to) n? Can you modify this definition directly using the subspace defined earlier?}
 		
